--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SV Cats</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+<style>
+	.section{
+		min-height: 520px;
+		min-width: 420px;
+	}
+
+</style>
 <body>
-	<h1>Your better Britain Cats from Minsk (Belarus)</h1>
+		<div id="root">
+		<div id="SITE_HEADER">			
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span> 
+		      </button>    				
+		      	<a class="navbar-brand" href="#"><h1>Путь в профессию</h1></a>
+		    </div>
+						<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+					<li><a href="#cats">Кошки и Коты</a></li>
+					<li><a href="#catties">Котята</a></li>
+					<li><a href="#food">Корм для животных</a></li>
+					<li><a href="#about">О нас</a></li>
+					<li><a href="#price">Доставка и прайс</a></li>
+				</ul>
+			</div>
+			</div>
+			</nav>
+		</div>
+
+<h1>Your better Britain Cats from Minsk (Belarus)</h1>
+	<div class="section" id="cats"><h3>Коты и Кошки</h3></div>
+	<div class="section" id="catties"><h3>Котята</h3></div>
+	<div class="section" id="food"><h3>Корм для животных</h3></div>		
+	<div class="section" id="about"><h3>О нас</h3></div>
+	<div class="section" id="price"><h3>Доставка и цены</h3></div>		
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	
 </body>
 </html>
