--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>SV Cats</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
 <style>
 	.section{
@@ -23,7 +23,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span> 
 		      </button>    				
-		      	<a class="navbar-brand" href="#"><h1>Путь в профессию</h1></a>
+		      	<a class="navbar-brand" href="#"><h1>Лучшие коты Минска</h1></a>
 		    </div>
 						<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
