--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
 <style>
-.navbar-header>a>h1{
+.navbar-header a h1{
 font-size: 24px;
 margin-top: 2px;
    margin-bottom: 2px;color: #a7790a;
@@ -15,7 +15,7 @@ margin-top: 2px;
 		min-height: 520px;
 		min-width: 420px;
 	}
-	.navbar-nav>li>a {
+	.navbar-nav li a {
 		color:#153973;
 	}
 
